# contextkeep

./: README.md
backend/: .gitignore  config.py  main.py  pyproject.toml
backend/models/: __init__.py  file_models.py
backend/modules/files/: models.py  service.py
backend/modules/projects/: api.py  models.py  service.py
backend/routers/: __init__.py  files.py
backend/services/: __init__.py  file_service.py
backend/tests/: conftest.py  test_file_service.py
backend/tests/integration/: test_list_projects_flow.py
backend/tests/unit/files/: test_file_service.py
backend/tests/unit/projects/: test_api.py  test_models.py  test_service.py
docs/: UC-001-list-projects-v2.md  UC-001-list-projects.md  UC-template.md  spec-v3-guidance-for-opus.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: CodeDisplay.css  CodeDisplay.jsx  FileTree.css  FileTree.jsx
frontend/src/components/ProjectList/: CreateProjectWidget.jsx  ProjectItem.jsx  ProjectList.css  ProjectList.jsx
